// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering other languages should sort them by the relevance 1`] = `
<React.Fragment>
  <div>
    <LocalizedInput
      hasError={false}
      horizontalConstraint="scale"
      isAutofocussed={false}
      language="en-GB"
      onChange={[Function]}
      value="en-GB"
    />
  </div>
  <div>
    <LocalizedInput
      hasError={false}
      horizontalConstraint="scale"
      isAutofocussed={false}
      language="de"
      onChange={[Function]}
      value="de"
    />
  </div>
  <div>
    <LocalizedInput
      hasError={false}
      horizontalConstraint="scale"
      isAutofocussed={false}
      language="fr"
      onChange={[Function]}
      value="fr"
    />
  </div>
  <div>
    <LocalizedInput
      hasError={false}
      horizontalConstraint="scale"
      isAutofocussed={false}
      language="nan-Hant-TW"
      onChange={[Function]}
      value="nan-Hant-TW"
    />
  </div>
  <div>
    <LocalizedInput
      hasError={false}
      horizontalConstraint="scale"
      isAutofocussed={false}
      language="pt-BR"
      onChange={[Function]}
      value="pt-BR"
    />
  </div>
  <ExpandControl
    collapseMessage="Collapse"
    expandMessage="Expand all languages (5)"
    isOpen={true}
    onClick={[MockFunction]}
  />
</React.Fragment>
`;

exports[`rendering when autofocus is activated should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        isAutofocussed={true}
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering when disabled should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        isDisabled={true}
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering when every field should display an error should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={true}
        horizontalConstraint="scale"
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering when expanded by default should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={false}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering when expansion toggle feature is disabled should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering when in read-only mode should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        isReadOnly={true}
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering when placeholders are provided should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        key="en"
        language="en"
        onChange={[Function]}
        placeholder="Value"
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering when there is an error on a specific field should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;

exports[`rendering with minimal props should match snapshot 1`] = `
<Horizontal
  constraint="scale"
>
  <Stack
    alignItems="stretch"
    scale="s"
  >
    <div>
      <LocalizedInput
        hasError={false}
        horizontalConstraint="scale"
        key="en"
        language="en"
        onChange={[Function]}
        value="Horse"
      />
    </div>
    <Collapsible
      isDefaultClosed={true}
    />
  </Stack>
</Horizontal>
`;
